# black-jack-solver

./: CMakeLists.txt  README.md
Gui/: CMakeLists.txt
Gui/Data/: data.txt
Gui/saved-code-just-in-case/: main.cpp
Gui/src/: Gui.cpp  Gui.h  Parser.cpp  Parser.h  backupmain.cpp  main.cpp  main2.cpp
newer/src/: Player.cpp  Player.h  Sim.cpp  Sim.h  main.cpp
src/: Player.cpp  Player.h  constants.h  helperfunctions.cpp  helperfunctions.h  main.cpp
